# mark

./: .clangd  .env.example  .gitignore  Dockerfile.worker  README.md  compile_flags.txt  dev.sh  docker-compose.yml  justfile  run.sh
.github/workflows/: ci.yml
agent/: .env.example  pyproject.toml
agent/mark_agent/: config.py  graph.py  main.py  prompts.py  state.py
agent/mark_agent/tools/: compile.py  spec.py
backend/: .gitignore  build.sh  pom.xml
backend/src/main/java/com/mark/: AssetController.java  AssetStore.java  CompileJob.java  CompileJobController.java  CompileJobProducer.java  CompileJobStore.java  CompileResultConsumer.java  CreateJobRequest.java  KafkaTopics.java  MarkApplication.java  MarkConfig.java  WebConfig.java
backend/src/main/resources/: application.yml
compiler/: arena.cpp  arena.hpp  compile.hpp  compile_api.cpp  compile_api.hpp  core.hpp  emit.cpp  emit.hpp  eval.cpp  eval.hpp  ir.hpp  lexer.cpp  lexer.hpp  mark.cpp  parser.cpp  parser.hpp
docs/: language-spec.md
examples/: academic.mark  hello.mark
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  ChatPanel.tsx  index.css
stdlib/: academic.mark  basic.mark
worker/: kafka.cpp  kafka.hpp  worker.cpp
