[project]
name = "mark-agent"
version = "0.1.0"
description = "LangGraph multi-agent service for Mark document authoring"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "sse-starlette>=2.1.0",
  "langgraph>=0.2.0",
  "langchain-ollama>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic-settings>=2.6.0",
]

[project.scripts]
mark-agent = "mark_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mark_agent"]
